# anzu

./: CMakeLists.txt  LICENSE  README.md  euler.anzu  grammar.txt  program.anzu  recursion.anzu
anzu-lang/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
anzu-lang/syntaxes/: anzu.tmLanguage.json
examples/: aoc2015-1.az  aoc2023-1-input.txt  aoc2023-1.az  aoc2024-1-input.txt  aoc2024-1.az  euler.anzu  euler.az  feature_test.az  file.az  list_destruction.az  module.az  recursion.anzu  recursion.az  stdlib.az  string.az  test.anzu  test.az  test_contents.txt  test_new.anzu  test_old.anzu  tokenizer.az  vector.az
examples/nested/: string.az
examples/std/: file.az  string.az  vector.az
lib/: io.az  map.az  std.az  str.az  tokenizer.az  utility.az  vector.az
parser/: ast_test.py  parser.py
src/: CMakeLists.txt  allocator.cpp  allocator.hpp  anzu.m.cpp  ast.cpp  ast.hpp  bytecode.cpp  bytecode.hpp  compiler.cpp  compiler.hpp  function_stuff.txt  functions.cpp  functions.hpp  lexer.cpp  lexer.hpp  memory.cpp  memory.hpp  names.cpp  names.hpp  object.cpp  object.hpp  op_codes.cpp  op_codes.hpp  operators.cpp  operators.hpp  optimiser.cpp  optimiser.hpp  parse_expression.cpp  parse_expression.hpp  parser.cpp  parser.hpp  print.hpp  program.cpp  program.hpp  resolver.cpp  resolver.hpp  runtime.cpp  runtime.hpp  scope_manager.hpp  stack_frame.cpp  (+13 more)
src/compilation/: type_manager.cpp  type_manager.hpp  variable_manager.cpp  variable_manager.hpp
src/utility/: common.hpp  hash.hpp  memory.hpp  overloaded.hpp  peekstream.hpp  print.hpp  scope_exit.hpp  scope_timer.hpp  stack.hpp  value_ptr.hpp  views.hpp
std/: io.az  tokenizer.az
